Update protobuf to 3.6.0. Fixes #5439