@@ -46,12 +46,29 @@ function strip_lines_from_bazel_cc() {
   echo "$clean_log" > $TEST_log
 }
 
+function strip_protobuf_unsafe_warning() {
+  # TODO: Protobuf triggers illegal reflective access warning in JDK 9.
+  # Remove this workaround when protobuf fixes this.
+  # See https://github.com/google/protobuf/issues/3781
+  clean_log=$(\
+    sed \
+    -e "/^WARNING: An illegal reflective access operation has occurred/d" \
+    -e "/^WARNING: Illegal reflective access by com\.google\.protobuf\.UnsafeUtil /d" \
+    -e "/^WARNING: Please consider reporting this to the maintainers of com\.google\.protobuf\.UnsafeUtil/d" \
+    -e "/^WARNING: Use --illegal-access=warn to enable warnings of further illegal reflective access operations/d" \
+    -e "/^WARNING: All illegal access operations will be denied in a future release/d" \
+    $TEST_log)
+
+  echo "$clean_log" > $TEST_log
+}
+
 function test_batch_mode() {
   # capture stdout/stderr in $TEST_log
   bazel --batch info >&$TEST_log || fail "Expected success"
 
   # strip extra lines printed by bazel.cc
   strip_lines_from_bazel_cc
+  strip_protobuf_unsafe_warning
 
   # compare $TEST_log with command.log
   assert_equals "" "$(diff $TEST_log $log 2>&1)"
@@ -68,6 +85,7 @@ function test_batch_mode_with_logging_flag() {
 
   # strip extra lines printed by bazel.cc
   strip_lines_from_bazel_cc
+  strip_protobuf_unsafe_warning
 
   # compare $TEST_log with command.log
   assert_equals "" "$(diff $TEST_log $log 2>&1)"
